[tool.poetry]
name = "keypoints"
version = "0.1.0"
description = ""
authors = ["Onur Ergin <4833288+OnurErgin@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.5.1+cu124", source = "pytorch124"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch124"}
openmim = "^0.3.9"


[[tool.poetry.source]]
name = "pytorch124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
